--- a/content/i18n/es/app1-es.json
+++ b/content/i18n/es/app1-es.json
@@ -2,7 +2,8 @@
   "es": {
     "KEY": "value",
     "KEY_2": "value 2",
-    "KEY_3": "value 3"
+    "KEY_3": "value 3",
+    "KEY_4": "value 4"
   },
   "title": "app1-es"
 }
