--- a/content/i18n/es/app1-es.json
+++ b/content/i18n/es/app1-es.json
@@ -3,6 +3,7 @@
     "KEY": "value",
     "KEY_2": "value 2",
     "KEY_3": "value 3",
+    "ASDAS": "sds",
     "KEY_4": "value 4"
   },
   "title": "app1-es"
